--- a/src/components/product-card/product-card.styles.scss
+++ b/src/components/product-card/product-card.styles.scss
@@ -12,6 +12,9 @@
         align-items: center;
         text-align: center;
 
+        position: relative;
+        z-index: 0;
+
         img {
             width: 200px;
             border-bottom: 2px solid blue;
@@ -64,7 +67,10 @@
       }
       
       .zoom:hover {
-        transform: scale(1.2); /* (150% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
+        position: relative;
+        z-index: 0;
+
+        transform: scale(1.2); /* (120% zoom - Note: if the zoom is too large, it will go outside of the viewport) */
         box-shadow: 0px 0px black;
 
       }
