--- a/src/routes/navigation/navigation.styles.scss
+++ b/src/routes/navigation/navigation.styles.scss
@@ -11,6 +11,7 @@
 	position: relative;
 	left: 50%;
 	translate: -50%;
+    z-index: 1;
 
     .website-title-container {      
         h1 {
